# sport-activities-features

./: .all-contributorsrc  .gitignore  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
.github/images/: README.md
.github/templates/: PULL_REQUEST.md
.github/workflows/: python-app.yml  test.yml
datasets/: README.md  collection_sample.csv  dead_end.tcx  fit_format_test_File.FIT  test.gpx
docs/: code_of_conduct.rst  conf.py  contributing.rst  contributors.rst  getting_started.rst  index.rst  installation.rst  license.rst  refs.bib  requirements.txt  testing.rst
docs/api/: activity_generator.rst  area_identification.rst  classes.rst  data_analysis.rst  data_extraction.rst  data_extraction_from_csv.rst  dead_end_identification.rst  file_manipulation.rst  gpx_manipulation.rst  hill_identification.rst  index.rst  interval_identification.rst  missing_elevation_identification.rst  overpy_node_manipulation.rst  plot_data.rst  sport_activities_features.rst  tcx_manipulation.rst  topographic_features.rst  training_loads.rst  trainingmetrics.rst  weather_identification.rst
examples/: calculate_distance_inside_area.py  calculate_training_load.py  convert_gpx_to_csv.py  convert_tcx_to_csv.py  convert_tcx_to_gpx.py  data_analysis_example.py  dead_end_extraction.py  draw_map_with_identified_hills.py  draw_map_with_identified_intervals.py  extract_data_inside_area.py  extract_random_activities_from_csv.py  hill_data_extraction.py  identify_interruptions.py  integral_metrics_extraction.py  interval_data_extraction.py  missing_elevation_data_extraction.py  overpy_node_manipulation.py  read_all_files.py  read_folder.py  read_gpx_file.py  read_tcx_file.py  weather_data_extraction.py
sport_activities_features/: __init__.py  activity_generator.py  area_identification.py  classes.py  data_analysis.py  data_extraction.py  data_extraction_from_csv.py  dead_end_identification.py  file_manipulation.py  gpx_manipulation.py  hill_identification.py  interval_identification.py  missing_elevation_identification.py  overpy_node_manipulation.py  plot_data.py  tcx_manipulation.py  topographic_features.py  training_loads.py  training_metrics.py  weather_identification.py
sport_activities_features/interruptions/: exercise.py  exercise_event.py  interruption_processor.py  overpass.py
sport_activities_features/tests/: test_area_identification.py  test_classes.py  test_data_analysis.py  test_data_extraction.py  test_gpx_file.py  test_hill_identification.py  test_integral_metrics_with_tcx_reader.py  test_interruptions.py  test_interval_identification.py  test_overpy_node_manipulation.py  test_tcx_file.py  test_training_loads.py  test_weather.py
sport_activities_features/tests/data/: riderx3.gpx  test.ppln  test_data.csv
sport_activities_features/weather_objects/: AverageWeather.py  Weather.py
tests/: test_area_identification.py  test_classes.py  test_data_analysis.py  test_data_extraction.py  test_dead_end_identification.py  test_different_activities.py  test_file_manipulation.py  test_gpx_file.py  test_hill_identification.py  test_importing_libs.py  test_integral_metrics_with_tcx_reader.py  test_interruptions.py  test_interval_identification.py  test_missing_elevation_identification.py  test_overpy_node_manipulation.py  test_sport_activities_features.py  test_tcx_file.py  test_training_loads.py  test_training_metrics.py  test_weather.py
tests/data/: 11.tcx  2.tcx  README.md  broken1.gpx  broken2.gpx  broken3.gpx  broken4.gpx  broken5.gpx  nodes_test.temp  pool_swim-activity_1.tcx  swimming_activity_1.tcx  test.ppln  walking_activity_1.tcx  weather_test.temp
