[tool.poetry]
name = "sport-activities-features"
version = "0.3.7"
description = "A minimalistic toolbox for extracting features from sport activity files"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>", "Alen Rajšp <alen.rajsp@.um.si>", "Luka Pečnik <luka.pecnik@student.um.si>", "Dušan Fister <dusan.fister@um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9.0, < 4.0.0"
matplotlib = "^3.3.3"
geopy = "^2.0.0"
requests = "^2.25.1"
overpy = "^0.6"
gpxpy = "^1.4.2"
geotiler = "^0.14.5"
dotmap = "^1.3.25"
numpy = "^1.23.1"
tcxreader = "^0.4.1"
pandas = "*"
niaaml = "^1.1.10"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
coveralls = "^2.2.0"
pytest = "^3.4.0"
interrogate = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
    
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 10
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
