[tool.poetry]
name = "sport-activities-features"
version = "0.3.12"
description = "A minimalistic toolbox for extracting features from sport activity files"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>", "Alen Rajšp <alen.rajsp@.um.si>", "Luka Pečnik <luka.pecnik@student.um.si>", "Dušan Fister <dusan.fister@um.si>"]
keywords = ['computational intelligence', 'cycling', 'data mining', 'datasets', 'gpx', 'optimization', 'sport activities', 'tcx']
homepage = "https://github.com/firefly-cpp/sport-activities-features"
repository = "https://github.com/firefly-cpp/sport-activities-features"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9.0, < 4.0.0"
matplotlib = "^3.3.3"
geopy = "^2.0.0"
requests = "^2.25.1"
overpy = "^0.6"
gpxpy = "^1.4.2"
geotiler = "^0.14.5"
dotmap = "^1.3.25"
numpy = "^1.23.1"
tcxreader = "^0.4.4"
pandas = "*"
niaaml = "^1.1.10"
tcx2gpx = "^0.1.4"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
coveralls = "^2.2.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
