[tool.poetry]
name = "sport-activities-features"
version = "0.4.2"
description = "A minimalistic toolbox for extracting features from sport activity files"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>", "Alen Rajšp <alen.rajsp@.um.si>", "Luka Pečnik <luka.pecnik@student.um.si>", "Dušan Fister <dusan.fister@um.si>", "Rok Kukovec <rok.kukovec1@student.um.si>"]
keywords = ['computational intelligence', 'cycling', 'data mining', 'datasets', 'gpx', 'optimization', 'sport activities', 'tcx']
homepage = "https://github.com/firefly-cpp/sport-activities-features"
repository = "https://github.com/firefly-cpp/sport-activities-features"
documentation = "https://sport-activities-features.readthedocs.io/en/latest/"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9.0, < 4.0.0"
matplotlib = "^3.3.3"
geopy = "^2.0.0"
overpy = "^0.6"
geotiler = "^0.14.5"
numpy = "*"
tcxreader = "^0.4.4"
pandas = "*"
niaaml = "^1.2.0"
tcx2gpx = "0.1.4"
gpxpy = "1.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
coveralls = "^2.2.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

# Assume Python 3.10.
target-version = 'py310'
# Black = 88, but we're using 79 to match Flake8.
line-length = 79
# every check supported by Ruff
select = [
    'ALL',
]

ignore = ['D211', 'D213', 'EXE002']

# Exclude a variety of commonly ignored directories.
exclude = [
    '.git',
    '.ruff_cache',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'venv',
    '.venv',
    'tests/roots/*',
    'build/*',
    'doc/_build/*',
]

[tool.ruff.per-file-ignores]
# If needed, add per-file ignores here.

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
